# terminus

./: .gitignore  Cargo.toml  README.md
benches/: iter_cells.rs
examples/: async.rs  basic.rs  binary-tutorial.rs  todo.rs  tour.rs
proptest-regressions/buffer/: size.txt
src/: direction.rs  lib.rs  tests.rs
src/buffer/: cell.rs  color.rs  mod.rs  size.rs
src/terminal_app/: mod.rs  raw_mode_guard.rs  renderer.rs  sync_terminal_app.rs
src/terminal_app/renderer/: fullscreen_renderer.rs  inline_renderer.rs  mod.rs
src/view/: alignment.rs  background.rs  border.rs  context.rs  context_modifier.rs  frame.rs  geometry_reader.rs  identified_view.rs  mod.rs  padding.rs  stack.rs  text.rs  view_tuple.rs
src/view/stack/: hstack.rs  mod.rs  vstack.rs  zstack.rs
